# silentify

./: .gitignore  Cargo.toml  README.md
silentify/src/: main.rs
src/: main.rs  spotifyclient.rs  volume_control.rs
src/volume_control/: mac_volume.rs  windows_volume.rs
src/volume_control/mac_volume/: GetAppVolume.applescript  GetSpotifyVolume.applescript  SetAppVolume.applescript  SetSpotifyVolume.applescript
src/volume_control/windows_volume/: AppMuter.cs  AppMuter.ps1  GetSpotifyVolume.ps1  SetSpotifyMute.ps1  SetSpotifyVolume.ps1
