[package]
name = "silentify"
version = "0.1.0"
authors = ["Sai Arvind <sai.arvindg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rspotify = { version = "0.9.0" }
tokio = { version = "0.2",  features = ["full"] }
futures = "0.3.12"